--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "10.0.4",
     "@testing-library/user-event": "7.2.1",
     "bootstrap": "4.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-icons": "3.11.0",
+    "react-icons": "^3.11.0",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
@@ -44,7 +50,7 @@
     "@sheerun/mutationobserver-shim": "0.3.3",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.2.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.21.5",
